    of support for exception transparency: withHandleUnchecked,
    useHandleUnchecked, inTransactionUnchecked, useTransactionUnchecked,
    withExtensionUnchecked, useExtensionUnchecked.
  - Renamed org.jdbi:jdbi3 artifact to org.jdbi:jdbi3-core, for consistency with
    other modules.
  - [breaking] StatementContext.getParsedSql() now returns a ParsedSql instead of String

3.0.0-beta2
  - [breaking] Removed Handle.update() and Handle.insert(), in favor of
    Handle.execute(), which does the same thing. Handle.execute() now returns
    the update count.
  - Removed core dependency on Guava.
  - [breaking] Switch from 1- to 0-based indices in OracleReturning.returnParameters()
  - [breaking] Added StatementContext parameter to NamedArgumentFinder.find() method
  - [breaking] Moved JoinRowMapper.JoinRow class to top-level class
  - [breaking] Modified @Register* annotations to be repeatable, instead of using
    array attributes.
  - [breaking] Moved and renamed MapEntryMapper.Config to top-level class
    MapEntryMappers
  - MapMapper preserves column ordering, #848
  - [breaking] split Handle.cleanupHandle() into cleanupHandleCommit() and *Rollback()
  - [breaking] remove TransactionStatus enum
  - [breaking] Refactored StatementRewriter into TemplateEngine and SqlParser.

3.0.0-beta1
  - [breaking] Refactored SqlStatementCustomizerFactory.createForParameter(...)
    - Now returns new SqlStatementParameterCustomizer type, so parameter customizers
      can be cached and reused for performance.
    - Now accepts a `Type` parameter, so parameter binders no longer have to check
      whether the statement is a PreparedBatch.
  - [breaking] Handlers config class, refactored HandlerFactory permit alternative
    method handler mapping strategies.
  - [breaking] Renamed BeanMapper, FieldMapper, and ConstructorMapper's `of(...)`
    methods to `factory(...)`. Added `of` methods in their place which return