@@ -1,52 +1,0 @@
-/*
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package org.jdbi.v3.sqlobject.customizer.internal;
-
-import java.lang.annotation.Annotation;
-import java.lang.reflect.Method;
-import java.lang.reflect.Parameter;
-import java.lang.reflect.Type;
-
-import org.jdbi.v3.sqlobject.customizer.FetchDirection;
-import org.jdbi.v3.sqlobject.customizer.SqlStatementCustomizer;
-import org.jdbi.v3.sqlobject.customizer.SqlStatementCustomizerFactory;
-import org.jdbi.v3.sqlobject.customizer.SqlStatementParameterCustomizer;
-
-public class FetchDirectionFactory implements SqlStatementCustomizerFactory
-{
-    @Override
-    public SqlStatementCustomizer createForType(Annotation annotation, Class<?> sqlObjectType)
-    {
-        int fetchDirection = ((FetchDirection) annotation).value();
-        return stmt -> stmt.setFetchDirection(fetchDirection);
-    }
-
-    @Override
-    public SqlStatementCustomizer createForMethod(Annotation annotation, Class<?> sqlObjectType, Method method)
-    {
-        return createForType(annotation, sqlObjectType);
-    }
-
-    @Override
-    public SqlStatementParameterCustomizer createForParameter(Annotation annotation,
-                                                              Class<?> sqlObjectType,
-                                                              Method method,
-                                                              Parameter param,
-                                                              int index,
-                                                              Type type)
-    {
-        return (stmt, fetchDirection) -> stmt.setFetchDirection((Integer) fetchDirection);
-    }
-
-}
