@@ -6,6 +6,7 @@
   - Renamed org.jdbi:jdbi3 artifact to org.jdbi:jdbi3-core, for consistency with
     other modules.
   - [breaking] StatementContext.getParsedSql() now returns a ParsedSql instead of String
+  - [breaking] Remove SqlStatement fetchForward / Reverse ; statements now FORWARD_ONLY
 
 3.0.0-beta2
   - [breaking] Removed Handle.update() and Handle.insert(), in favor of
